[gd_scene load_steps=93 format=2]

[ext_resource path="res://actor/player/sprite/attack1-03.png" type="Texture" id=1]
[ext_resource path="res://actor/player/Player.gd" type="Script" id=2]
[ext_resource path="res://actor/player/sprite/attack2-01.png" type="Texture" id=3]
[ext_resource path="res://actor/player/sprite/hurt-00.png" type="Texture" id=4]
[ext_resource path="res://actor/player/sprite/hurt-01.png" type="Texture" id=5]
[ext_resource path="res://actor/player/sprite/idle-00.png" type="Texture" id=6]
[ext_resource path="res://actor/player/sprite/run-00.png" type="Texture" id=7]
[ext_resource path="res://actor/player/sprite/attack3-01.png" type="Texture" id=8]
[ext_resource path="res://actor/player/sprite/run-03.png" type="Texture" id=9]
[ext_resource path="res://actor/player/sprite/run-02.png" type="Texture" id=10]
[ext_resource path="res://actor/player/sprite/idle-03.png" type="Texture" id=11]
[ext_resource path="res://actor/player/sprite/hurt-02.png" type="Texture" id=12]
[ext_resource path="res://actor/player/sprite/crouch-walk-00.png" type="Texture" id=13]
[ext_resource path="res://actor/player/sprite/fall-00.png" type="Texture" id=14]
[ext_resource path="res://actor/player/sprite/fall-01.png" type="Texture" id=15]
[ext_resource path="res://actor/player/sprite/attack2-02.png" type="Texture" id=16]
[ext_resource path="res://actor/player/sprite/swrd-drw-02.png" type="Texture" id=17]
[ext_resource path="res://actor/player/sprite/stand-00.png" type="Texture" id=18]
[ext_resource path="res://actor/player/sprite/attack3-04.png" type="Texture" id=19]
[ext_resource path="res://actor/player/sprite/slide-00.png" type="Texture" id=20]
[ext_resource path="res://actor/player/sprite/swrd-shte-02.png" type="Texture" id=21]
[ext_resource path="res://actor/player/sprite/jump-00.png" type="Texture" id=22]
[ext_resource path="res://actor/player/sprite/jump-03.png" type="Texture" id=23]
[ext_resource path="res://actor/player/sprite/attack1-02.png" type="Texture" id=24]
[ext_resource path="res://actor/player/sprite/crouch-03.png" type="Texture" id=25]
[ext_resource path="res://actor/player/sprite/idle-02.png" type="Texture" id=26]
[ext_resource path="res://actor/player/sprite/die-01.png" type="Texture" id=27]
[ext_resource path="res://actor/player/sprite/attack3-03.png" type="Texture" id=28]
[ext_resource path="res://actor/player/sprite/stand-01.png" type="Texture" id=29]
[ext_resource path="res://actor/player/sprite/attack1-01.png" type="Texture" id=30]
[ext_resource path="res://actor/player/sprite/swrd-drw-00.png" type="Texture" id=31]
[ext_resource path="res://actor/player/sprite/run-01.png" type="Texture" id=32]
[ext_resource path="res://actor/player/sprite/attack2-00.png" type="Texture" id=33]
[ext_resource path="res://actor/player/sprite/attack1-00.png" type="Texture" id=34]
[ext_resource path="res://actor/player/sprite/swrd-drw-03.png" type="Texture" id=35]
[ext_resource path="res://actor/player/sprite/attack3-02.png" type="Texture" id=36]
[ext_resource path="res://actor/player/sprite/slide-01.png" type="Texture" id=37]
[ext_resource path="res://actor/player/sprite/die-02.png" type="Texture" id=38]
[ext_resource path="res://actor/player/sprite/stand-02.png" type="Texture" id=39]
[ext_resource path="res://actor/player/sprite/attack1-04.png" type="Texture" id=40]
[ext_resource path="res://actor/player/sprite/idle-01.png" type="Texture" id=41]
[ext_resource path="res://actor/player/sprite/attack3-00.png" type="Texture" id=42]
[ext_resource path="res://actor/player/sprite/crouch-00.png" type="Texture" id=43]
[ext_resource path="res://actor/player/sprite/attack2-04.png" type="Texture" id=44]
[ext_resource path="res://actor/player/sprite/die-00.png" type="Texture" id=45]
[ext_resource path="res://actor/player/sprite/crouch-01.png" type="Texture" id=46]
[ext_resource path="res://actor/player/sprite/attack2-03.png" type="Texture" id=47]
[ext_resource path="res://actor/player/sprite/attack2-05.png" type="Texture" id=48]
[ext_resource path="res://actor/player/sprite/attack3-05.png" type="Texture" id=49]
[ext_resource path="res://actor/player/sprite/jump-01.png" type="Texture" id=50]
[ext_resource path="res://actor/player/sprite/jump-02.png" type="Texture" id=51]
[ext_resource path="res://actor/player/sprite/crouch-02.png" type="Texture" id=52]
[ext_resource path="res://actor/player/sprite/crouch-walk-01.png" type="Texture" id=53]
[ext_resource path="res://actor/player/sprite/crouch-walk-02.png" type="Texture" id=54]
[ext_resource path="res://actor/player/sprite/crouch-walk-03.png" type="Texture" id=55]
[ext_resource path="res://actor/player/sprite/crouch-walk-04.png" type="Texture" id=56]
[ext_resource path="res://actor/player/sprite/crouch-walk-05.png" type="Texture" id=57]
[ext_resource path="res://actor/player/sprite/swrd-shte-03.png" type="Texture" id=58]
[ext_resource path="res://actor/player/sprite/swrd-drw-01.png" type="Texture" id=59]
[ext_resource path="res://actor/player/sprite/die-03.png" type="Texture" id=60]
[ext_resource path="res://actor/player/sprite/die-04.png" type="Texture" id=61]
[ext_resource path="res://actor/player/sprite/die-05.png" type="Texture" id=62]
[ext_resource path="res://actor/player/sprite/die-06.png" type="Texture" id=63]
[ext_resource path="res://actor/player/sprite/swrd-shte-00.png" type="Texture" id=64]
[ext_resource path="res://actor/player/sprite/run-04.png" type="Texture" id=65]
[ext_resource path="res://actor/player/sprite/swrd-shte-01.png" type="Texture" id=66]
[ext_resource path="res://actor/player/sprite/run-05.png" type="Texture" id=67]
[ext_resource path="res://actor/player/PlayerState.gd" type="Script" id=68]
[ext_resource path="res://actor/player/Camera2D.gd" type="Script" id=70]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 37 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 41 ), ExtResource( 26 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 23 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 32 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 65 ), ExtResource( 67 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 27 ), ExtResource( 38 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 3 ), ExtResource( 16 ), ExtResource( 47 ), ExtResource( 44 ), ExtResource( 48 ) ],
"loop": true,
"name": "attack2",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ), ExtResource( 8 ), ExtResource( 36 ), ExtResource( 28 ), ExtResource( 19 ), ExtResource( 49 ) ],
"loop": true,
"name": "attack3",
"speed": 5.0
}, {
"frames": [ ExtResource( 64 ), ExtResource( 66 ), ExtResource( 21 ), ExtResource( 58 ) ],
"loop": true,
"name": "sword hide",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 12 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 29 ), ExtResource( 39 ) ],
"loop": true,
"name": "wake",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 59 ), ExtResource( 17 ), ExtResource( 35 ) ],
"loop": true,
"name": "sword draw",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 30 ), ExtResource( 24 ), ExtResource( 1 ), ExtResource( 40 ) ],
"loop": true,
"name": "attack1",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ) ],
"loop": true,
"name": "crawl",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 46 ), ExtResource( 52 ), ExtResource( 25 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "attack1"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack1" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack2" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_Attack"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack3"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack3" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "crawl"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "crawl" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "crouch"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "crouch" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "died"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=8]
resource_name = "fall"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "fall" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=9]
resource_name = "hurt"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hurt" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=10]
resource_name = "idle"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=11]
resource_name = "jump"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=12]
resource_name = "run"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=13]
resource_name = "slide"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "slide" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=14]
resource_name = "sword draw"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "sword draw" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=15]
resource_name = "sword hide"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "sword hide" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=16]
resource_name = "wake"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "wake" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=17]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=19]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 8, 13 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 8, 11 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 8, 2 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 20
script = ExtResource( 2 )

[node name="PlayerState" type="Node2D" parent="."]
script = ExtResource( 68 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
frames = SubResource( 1 )
animation = "attack2"
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/attack1 = SubResource( 2 )
anims/attack2 = SubResource( 3 )
anims/attack3 = SubResource( 4 )
anims/crawl = SubResource( 5 )
anims/crouch = SubResource( 6 )
anims/died = SubResource( 7 )
anims/fall = SubResource( 8 )
anims/hurt = SubResource( 9 )
anims/idle = SubResource( 10 )
anims/jump = SubResource( 11 )
anims/run = SubResource( 12 )
anims/slide = SubResource( 13 )
"anims/sword draw" = SubResource( 14 )
"anims/sword hide" = SubResource( 15 )
anims/wake = SubResource( 16 )

[node name="AnimationEffect" type="AnimationPlayer" parent="AnimatedSprite"]
anims/hit = SubResource( 17 )
anims/invulnerability = SubResource( 18 )
anims/rest = SubResource( 19 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 18

[node name="StandHitBox" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, 5 )
shape = SubResource( 20 )

[node name="SlideHitBox" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, 10 )
shape = SubResource( 21 )
disabled = true

[node name="CrouchHitBox" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, 7 )
shape = SubResource( 22 )
disabled = true

[node name="StandingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StandingArea"]
position = Vector2( 0, -6 )
shape = SubResource( 23 )

[node name="AttackDetector" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 7 )
rotation = -1.5708
collision_layer = 0
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackDetector"]
position = Vector2( -2.99999, 11 )
polygon = PoolVector2Array( 10, 11, 2.00001, 11, -0.99999, 10, -7, 4.00001, -9, -0.999991, -9.00001, -11, 9.99999, -11 )

[node name="StandCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 20 )

[node name="SlideCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 21 )
disabled = true

[node name="CrouchCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 22 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
script = ExtResource( 70 )

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 2.6
one_shot = true
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
